WGD-887 [IE11 only] Number of days/contacts can no longer be selected for dashlets on IE11

--- a/src/styles/general.less
+++ b/src/styles/general.less
@@ -281,12 +281,3 @@ ng-select {
         }
     }
 }
-
-@media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {
-    /* IE10+ specific styles go here */
-    .ie-header-class {
-        app-form-input {
-            min-width: 40px !important;
-        }
-    }
-}
